# projeto-senac-2026

./: LICENSE  README.md
api/: .coverage  .coverage.UNISENAC201056.pid15196.X4zpMCix  pyproject.toml
api/tests/: test_app.py  test_db.py
api/viajei_api/: app.py  settings.py
api/viajei_api/schemas/: user.py
app/: about.html  form.html  index.html  login.html
app/scripts/: form.js  login.js  menu.js  modal.js
app/style/: about.css  form.css  index.css  login.css  style.css
gerente_girafales/: carro.py  gerente_girafales.py  onibus.py  vaga.py  vaga_van.py  van.py  veiculo.py
gerente_girafales/erros/: VeiculoGrandeException.py
proj/: .gitignore
proj/classes/prg/: combatente.py  inventario.py  mago.py  rpg.py
proj/classes/python/: Aluno.py  backup_dados.py  builderman_classes.py  buscar_palavra.py  calculadora_lula.py  calcular_medias_alunos.py  carro.py  clima.py  compras.py  conta_of_banco.py  converter_inteiro.py  dado_em_casa.py  dispositivo_telefonico.py  documentos.py  elevador.py  empresa.py  erro.py  erro_da_idade_guries.py  gato.py  interrupitor.py  jogador.py  limpar_arquivo.py  livro.py  obter_aura.py  olho.py  simulador_dado_em_casa.py  sons_verde.py  spotify.py  ta_pobre_em.py  tamagochi.py  termometro.py  tocar_uma_guitarra.py  verificar_sinal.py  virou_o_TZE_adm.py
